# chrophos

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
config/: canon5dii.toml  d5ii.toml  nikon_z6.toml
docs/: examples.md  index.md  installation.md  overview.md  problem_solution.md
src/chrophos/: bench.py  camera.py  check_timestamps.py  cli.py  config.py  control.py  equalize.py  exposure.py  exposure_ramping_alg.md  image.py  parameter.py  plan.py  query.py  shell.py  timelapse.py
src/chrophos/camera/: backend.py  camera.py  parameter.py
src/chrophos/utilities/: benchmark.py
tests/: test_plan.py
