[project]
name = "chrophos"
version = "0.1.0"
description = "Timelapse management and creation"
authors = [
    {name = "Thomas Chamberlin", email = "tchamberlin@users.noreply.github.com"},
]
dependencies = [
    "gphoto2>=2.3.6",
    "scikit-image>=0.21.0",
    "rawpy>=0.18.1",
    "matplotlib>=3.7.2",
    "deepdiff>=6.3.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "GPLv3"}

[project.scripts]
chrophos = "chrophos.control:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "ipython>=8.14.0",
    "ipdb>=0.13.13",
    "pytest>=7.4.0",
    "jupyterlab>=4.0.4",
    "notebook>=7.0.2",
]


[tool.black]
preview = true
line-length = 100

[tool.ruff]
select = [
  "F",    # https://beta.ruff.rs/docs/rules/#pyflakes-f
  "E",    # https://beta.ruff.rs/docs/rules/#error-e
  "W",    # https://beta.ruff.rs/docs/rules/#warning-w
  "B",    # https://beta.ruff.rs/docs/rules/#flake8-bugbear-b
  "I",    # https://beta.ruff.rs/docs/rules/#isort-i
  "NPY",  # https://beta.ruff.rs/docs/rules/#numpy-specific-rules-npy
  "PD",   # https://beta.ruff.rs/docs/rules/#pandas-vet-pd
  "RUF",  # https://beta.ruff.rs/docs/rules/#ruff-specific-rules-ruf
]
fixable = ["ALL"]
unfixable = ["B"]
ignore = [
  "E741",  # ambiguous-variable-name
]
line-length = 100

[tool.pyright]
reportImplicitStringConcatenation = false