[project]
name = "chrophos"
version = "0.1.0"
description = "Timelapse management and creation"
authors = [
    {name = "Thomas Chamberlin", email = "tchamberlin@users.noreply.github.com"},
]
dependencies = [
    "gphoto2>=2.3.6",
    "rawpy>=0.18.1",
    "matplotlib>=3.7.2",
    "deepdiff>=6.3.1",
    "typer>=0.9.0",
    "ipython>=8.14.0",
    "tomlkit>=0.12.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "GPLv3"}

[project.scripts]
chrophos = "chrophos.cli:app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
image = [
    "scikit-image>=0.21.0",
]
dev = [
    "ipdb>=0.13.13",
    "pytest>=7.4.0",
    "jupyterlab>=4.0.4",
    "notebook>=7.0.2",
]


[tool.black]
preview = true
line-length = 100

[tool.ruff]
select = [
  "F",    # https://beta.ruff.rs/docs/rules/#pyflakes-f
  "E",    # https://beta.ruff.rs/docs/rules/#error-e
  "W",    # https://beta.ruff.rs/docs/rules/#warning-w
  "D",    # https://beta.ruff.rs/docs/rules/#pydocstyle-d
  "B",    # https://beta.ruff.rs/docs/rules/#flake8-bugbear-b
  "I",    # https://beta.ruff.rs/docs/rules/#isort-i
  "NPY",  # https://beta.ruff.rs/docs/rules/#numpy-specific-rules-npy
  "RUF",  # https://beta.ruff.rs/docs/rules/#ruff-specific-rules-ruf
  "UP",   # https://beta.ruff.rs/docs/rules/#pyupgrade-up
#  "TRY",  # https://beta.ruff.rs/docs/rules/#tryceratops-try
#  "ERA",  # https://beta.ruff.rs/docs/rules/#eradicate-era
]
fixable = ["ALL"]
unfixable = ["B", "F401"]
ignore = [
  "E741",   # ambiguous-variable-name
  "D100",   # Missing docstring in public module
  "D101",   # Missing docstring in public class
  "D102",   # Missing docstring in public method
  "D103",   # Missing docstring in public function
  "D104",   # Missing docstring in public package
  "D105",   # Missing docstring in magic method
  "D106",   # Missing docstring in public nested class
  "D107",   # Missing docstring in `__init__`
  "TRY003", # Abstract `raise` to an inner function
  "TRY301", # Abstract `raise` to an inner function
  "TRY301", # Avoid specifying long messages outside the exception class
]
line-length = 100

[tool.ruff.pydocstyle]
convention = "google"

[tool.pyright]
reportImplicitStringConcatenation = false
