[project]
name = "chrophos"
version = "0.1.0"
description = "Timelapse management and creation"
authors = [
    {name = "Thomas Chamberlin", email = "tchamberlin@users.noreply.github.com"},
]
dependencies = [
    "gphoto2>=2.3.6",
    "matplotlib>=3.7.2",
    "deepdiff>=6.3.1",
    "typer>=0.9.0",
    "ipython>=8.14.0",
    "tomlkit>=0.12.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "GPLv3"}

[project.optional-dependencies]
raw = ["rawpy>=0.18"]

[project.scripts]
chrophos = "chrophos.cli:app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
image = [
    "scikit-image>=0.21.0",
]
dev = [
    "ipdb>=0.13.13",
    "pytest>=7.4.0",
    "jupyterlab>=4.0.4",
    "notebook>=7.0.2",
]



[tool.ruff]
select = [
  "F",    # https://docs.astral.sh/docs/rules/#pyflakes-f
  "E",    # https://docs.astral.sh/docs/rules/#error-e
  "W",    # https://docs.astral.sh/docs/rules/#warning-w
  "B",    # https://docs.astral.sh/docs/rules/#flake8-bugbear-b
  "I",    # https://docs.astral.sh/docs/rules/#isort-i
  "NPY",  # https://docs.astral.sh/docs/rules/#numpy-specific-rules-npy
  "RUF",  # https://docs.astral.sh/docs/rules/#ruff-specific-rules-ruf
  "T100",  #https://docs.astral.sh/ruff/rules/debugger/
]
fixable = ["ALL"]
unfixable = ["B"]
ignore = [
  "A",  # https://docs.astral.sh/ruff/rules/#flake8-builtins-a
  "ANN",  # https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
  "ARG",  # https://docs.astral.sh/ruff/rules/#flake8-unused-arguments-arg
  "BLE001",  # https://docs.astral.sh/ruff/rules/#flake8-blind-except-ble
  "C901",  # https://docs.astral.sh/ruff/rules/complex-structure/
  "D",  # https://docs.astral.sh/ruff/rules/#pydocstyle-d
  "DJ",  # https://docs.astral.sh/ruff/rules/#flake8-django-dj
  "DTZ",  # https://docs.astral.sh/ruff/rules/#flake8-datetimez-dtz
  "E741",  # https://docs.astral.sh/ruff/rules/ambiguous-variable-name/
  "EM",  # https://docs.astral.sh/ruff/rules/#flake8-errmsg-em
  "ERA001",  # https://docs.astral.sh/ruff/rules/commented-out-code/
  "FBT",  # https://docs.astral.sh/ruff/rules/#flake8-boolean-trap-fbt
  "FIX",  # https://docs.astral.sh/ruff/rules/#flake8-fixme-fix
  "G004",  # https://docs.astral.sh/ruff/rules/logging-f-string/
  "INP001",  # https://beta.ruff.rs/docs/rules/#flake8-no-pep420: Checks for packages that are missing __init__.py
  "N",  # https://beta.ruff.rs/docs/rules/#pep8-naming: various rules for variable/class/etc. names
  "PD901",  # https://docs.astral.sh/ruff/rules/#pandas-vet-pd: df is a bad variable name
  "PERF",  # https://beta.ruff.rs/docs/rules/#perflint: detects various performance anti-patterns
  "PLR",  # https://beta.ruff.rs/docs/rules/#pylint
  "PLW",  # https://beta.ruff.rs/docs/rules/#pylint
  "PT",  # https://docs.astral.sh/ruff/rules/#flake8-pytest-style-pt
  "PTH",  # flake8-use-pathlib: Use pathlib instead of os.path
  "PYI",  # https://docs.astral.sh/ruff/rules/#flake8-pyi-pyi
  "RET",  # https://docs.astral.sh/ruff/rules/#flake8-return-ret
  "RUF012",  # https://docs.astral.sh/ruff/rules/mutable-class-default/
  "S",  # https://docs.astral.sh/ruff/rules/#flake8-bandit-s
  "SIM",  # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
  "SLF",  # https://docs.astral.sh/ruff/rules/#flake8-self-slf
  "T20",  # https://docs.astral.sh/ruff/rules/#flake8-print-t20
  "TD",  # https://docs.astral.sh/ruff/rules/#flake8-todos-td
  "TRY003",  # https://docs.astral.sh/ruff/rules/raise-vanilla-args/
  "TRY301",  # https://docs.astral.sh/ruff/rules/raise-within-try/
  "W191",  # https://docs.astral.sh/ruff/rules/tab-indentation/
  "E501", # https://docs.astral.sh/ruff/rules/line-too-long/  # TODO: would be nice to check long comments...
]
extend-exclude = ["toys", "alda/utils/mjd.py"]
line-length = 100

# https://docs.astral.sh/ruff/settings/#isort
[tool.ruff.isort]
combine-as-imports = true

[tool.ruff.pydocstyle]
convention = "google"

[tool.pyright]
reportImplicitStringConcatenation = false
